# licenseseat-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/licenseseat/: Cargo.toml  README.md
crates/licenseseat/examples/: cap_simulation_test.rs  dev_heartbeat.rs  offline_entitlement_test.rs  offline_integration_test.rs  stress_test.rs
crates/licenseseat/src/: cache.rs  client.rs  config.rs  device.rs  error.rs  events.rs  lib.rs  models.rs  offline.rs  telemetry.rs
crates/licenseseat/tests/: api_client_tests.rs  auto_validation_tests.rs  cache_tests.rs  concurrency_tests.rs  config_tests.rs  crypto_tests.rs  device_identifier_tests.rs  events_tests.rs  models_tests.rs  offline_validation_tests.rs  scenario_tests.rs  sdk_integration_tests.rs  telemetry_tests.rs
crates/tauri-plugin-licenseseat/: Cargo.toml  README.md  build.rs  package-lock.json  package.json  tsconfig.json
crates/tauri-plugin-licenseseat/guest-js/: index.ts
crates/tauri-plugin-licenseseat/permissions/: default.toml
crates/tauri-plugin-licenseseat/permissions/autogenerated/: reference.md
crates/tauri-plugin-licenseseat/permissions/autogenerated/commands/: check_entitlement.toml  checkout_machine_file.toml  deactivate_key.toml  fetch_signing_key.toml  generate_download_token.toml  generate_offline_token.toml  get_admin_snapshot.toml  get_client_status.toml  get_latest_release.toml  has_entitlement.toml  health.toml  heartbeat.toml  heartbeat_key.toml  list_releases.toml  restore_license.toml  sync_offline_assets.toml  validate.toml  verify_machine_file.toml  verify_offline_token.toml
crates/tauri-plugin-licenseseat/permissions/schemas/: schema.json
crates/tauri-plugin-licenseseat/src/: commands.rs  config.rs  error.rs  lib.rs
docs/releases/: 0.5.1.md  0.5.2.md  0.5.3.md  offline-validation-metadata-preservation.md
