[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
authors = ["LicenseSeat <hello@licenseseat.com>"]
license = "MIT"
repository = "https://github.com/licenseseat/licenseseat-rust"
homepage = "https://licenseseat.com"
documentation = "https://docs.licenseseat.com"
keywords = ["licensing", "license-management", "software-licensing", "drm"]
categories = ["authentication", "api-bindings"]

[workspace.dependencies]
# Shared dependencies across crates
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["sync", "time", "rt"] }
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Crypto (for offline validation)
ed25519-dalek = { version = "2", features = ["rand_core"] }
base64 = "0.22"
sha2 = "0.10"

# Internal
licenseseat = { path = "crates/licenseseat" }
